prevent default on key down and fix z-index for labels

--- a/src/Juegardos.Website/wwwroot/css/app.css
+++ b/src/Juegardos.Website/wwwroot/css/app.css
@@ -2009,12 +2009,12 @@ i.dislike.selected {
 }
 
 .lives, .claws, #gameLogo {
-    z-index: 1000;
+    z-index: 1;
 }
 
 .button {
     position: absolute;
-    z-index: 1000;
+    z-index: 1;
     padding: 5px 10px 5px 10px;
     background-color: #beacb3;
     text-shadow: -1px -1px black, 1px 1px white;
